unpackaged/main/default/objects/Contact/fields/Account_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_c__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_Name_c</label>
    <type>Text</type>
</CustomField>