unpackaged/main/default/objects/Contact/fields/Account_Parent__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent__c</fullName>
    <formula>Account.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Parent</label>
    <type>Text</type>
</CustomField>