unpackaged/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>User_ID__r.IsActive</formula>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>