unpackaged/main/default/objects/Contact/fields/Actively_seeking_more_groups__c.field-meta.xml
<CustomField>
    <fullName>Actively_seeking_more_groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actively seeking more groups</label>
    <type>Checkbox</type>
</CustomField>