unpackaged/main/default/objects/Contact/fields/Assigned_CSS__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Client Support Specialist assigned to work with a Moderator</description>
    <inlineHelpText>The Client Support Specialist assigned to work with a Moderator</inlineHelpText>
    <label>Assigned CSS</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>The contact must be an NCM Associate record type (employee) and have an Employment Status of Contracted or Employed.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <filterItems>
            <field>$Source.Employment_Status__c</field>
            <operation>equals</operation>
            <value>Employed</value>
        </filterItems>
        <filterItems>
            <field>$Source.Employment_Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </filterItems>
        <infoMessage>Select the NCM employee contact who will serve as the CSS for this moderator.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CSS Contacts</relationshipLabel>
    <relationshipName>CSSContacts</relationshipName>
    <type>Lookup</type>
</CustomField>