unpackaged/main/default/objects/Contact/fields/At_Capacity__c.field-meta.xml
<CustomField>
    <fullName>At_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Capacity</label>
    <type>Checkbox</type>
</CustomField>