unpackaged/main/default/objects/Contact/fields/Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Case_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>this is the case that created the Contact</inlineHelpText>
    <label>Case Created</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>