unpackaged/main/default/objects/Contact/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <description>The Client Status value from this contact&#39;s parent account.</description>
    <formula>TEXT(Account.Client_Status__c)</formula>
    <inlineHelpText>The Client Status value from this contact&#39;s parent account.</inlineHelpText>
    <label>Client Status</label>
    <type>Text</type>
</CustomField>