unpackaged/main/default/objects/Contact/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>