unpackaged/main/default/objects/Contact/fields/ContactID_18__c.field-meta.xml
<CustomField>
    <fullName>ContactID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID (18)</label>
    <type>Text</type>
</CustomField>