unpackaged/main/default/objects/Contact/fields/Course_Prin_of_Collision_Center_Man__c.field-meta.xml
<CustomField>
    <fullName>Course_Prin_of_Collision_Center_Man__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Prin of Collision Center Mgt</label>
    <type>Checkbox</type>
</CustomField>