unpackaged/main/default/objects/Contact/fields/Date_Last_Visited_Website__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Visited_Website__c</fullName>
    <inlineHelpText>Marketo integration - when this contact last visited an NCM Website</inlineHelpText>
    <label>Date Last Visited Website</label>
    <type>Date</type>
</CustomField>