unpackaged/main/default/objects/Contact/fields/Date_Stamp_Can_Spam__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Can_Spam__c</fullName>
    <description>Date the Canadian customer declined any further &quot;spam&quot; marketing emails</description>
    <inlineHelpText>Date the Canadian customer declined any further &quot;spam&quot; marketing emails</inlineHelpText>
    <label>Date Stamp (CASL)</label>
    <type>Date</type>
</CustomField>