unpackaged/main/default/objects/Contact/fields/Date_Time_Stamp_Can_Spam__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Stamp_Can_Spam__c</fullName>
    <description>Date and Time the Canadian customer declined any further &quot;spam&quot; marketing emails</description>
    <inlineHelpText>Date and Time the Canadian customer declined any further &quot;spam&quot; marketing emails</inlineHelpText>
    <label>Date/Time Stamp (CASL)</label>
    <type>DateTime</type>
</CustomField>