unpackaged/main/default/objects/Contact/fields/Direct_Dial_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Dial_Phone__c</fullName>
    <label>Direct Dial Phone</label>
    <type>Phone</type>
</CustomField>