unpackaged/main/default/objects/Contact/fields/Direct_Dial_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Direct_Dial_Phone_Ext__c</fullName>
    <description>Direct Dial Phone Extension</description>
    <inlineHelpText>Direct Dial Phone Extension</inlineHelpText>
    <label>Direct Dial Phone Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>