unpackaged/main/default/objects/Contact/fields/Do_Not_BEEP__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_BEEP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Through BEEP Campaigns these contacts have been sent back to us that it&#39;s the dealerships policy not to transfer to voicemail, We exclude them from future BEEP lists to reduce costs and increase response rates.</inlineHelpText>
    <label>Do Not BEEP</label>
    <type>Checkbox</type>
</CustomField>