unpackaged/main/default/objects/Contact/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
                <default>true</default>
                <label>Employed</label>
            </value>
            <value>
                <fullName>External List</fullName>
            </value>
            <value>
                <fullName>Low/No_Activity</fullName>
                <label>Low/No Activity</label>
            </value>
            <value>
                <fullName>No Longer Employed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>