unpackaged/main/default/objects/Contact/fields/Group_Subscription_Seller__c.field-meta.xml
<CustomField>
    <fullName>Group_Subscription_Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Subscription Seller</label>
    <type>Checkbox</type>
</CustomField>