unpackaged/main/default/objects/Contact/fields/Group_Subscription_Seller_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Group_Subscription_Seller_Expiration__c</fullName>
    <label>Group Subscription Seller Expiration</label>
    <type>Date</type>
</CustomField>