unpackaged/main/default/objects/Contact/fields/Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Day__c</fullName>
    <label>Last Day</label>
    <type>DateTime</type>
</CustomField>