unpackaged/main/default/objects/Contact/fields/Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified__c</fullName>
    <description>Date contact was last verified</description>
    <inlineHelpText>Date the contact is verified</inlineHelpText>
    <label>Last Verified</label>
    <type>Date</type>
</CustomField>