unpackaged/main/default/objects/Contact/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <label>Lead Source Description</label>
    <type>TextArea</type>
</CustomField>