unpackaged/main/default/objects/Contact/fields/Load_Switch__c.field-meta.xml
<CustomField>
    <fullName>Load_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for mass modifying records to kick off workflows and triggers based on a change in the record. A Demand Tools load is made and this check box is mass checked or unchecked to force a change to the record.</description>
    <label>Load Switch</label>
    <type>Checkbox</type>
</CustomField>