unpackaged/main/default/objects/Contact/fields/Lookup_Additional_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Additional_Field__c</fullName>
    <formula>Account.Name &amp; &#39; • &#39; &amp; Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Additional Field</label>
    <type>Text</type>
</CustomField>