unpackaged/main/default/objects/Contact/fields/Marketing_Email_Hard_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Hard_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marketo has not been able to successfully email this address without a failure message from client side</inlineHelpText>
    <label>Marketing Email Hard Bounce</label>
    <type>Checkbox</type>
</CustomField>