unpackaged/main/default/objects/Contact/fields/Marketo_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a filtered option that when FALSE will prevent Marketo from syncing the record or making updates.</description>
    <inlineHelpText>This is a filtered option that when FALSE will prevent Marketo from syncing the record or making updates.</inlineHelpText>
    <label>Marketo Sync?</label>
    <type>Checkbox</type>
</CustomField>