unpackaged/main/default/objects/Contact/fields/mkto71_Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Demographic_Score__c</fullName>
    <label>mkto71 Demographic Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>