unpackaged/main/default/objects/Contact/fields/Moderator_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Team_Manager__c</fullName>
    <formula>User_ID__r.Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator Team Manager</label>
    <type>Text</type>
</CustomField>