unpackaged/main/default/objects/Contact/fields/Name_Badge_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Name_Badge_Nickname__c</fullName>
    <label>Name Badge Nickname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>