unpackaged/main/default/objects/Contact/fields/NCM_Associates_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>NCM_Associates_Records_Created__c</fullName>
    <label>NCM Associates Records Created</label>
    <type>Date</type>
</CustomField>