unpackaged/main/default/objects/Contact/fields/NCM_Department__c.field-meta.xml
<CustomField>
    <fullName>NCM_Department__c</fullName>
    <label>Department (NCM Classification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Department</valueSetName>
    </valueSet>
</CustomField>