unpackaged/main/default/objects/Contact/fields/NCM_Title__c.field-meta.xml
<CustomField>
    <fullName>NCM_Title__c</fullName>
    <label>Title (NCM Classification)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCM_Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NCM_Title</valueSetName>
    </valueSet>
</CustomField>