unpackaged/main/default/objects/Contact/fields/NCMi_Class__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Class__c</fullName>
    <label>NCMi Class</label>
    <type>TextArea</type>
</CustomField>