unpackaged/main/default/objects/Contact/fields/NCMI_Client__c.field-meta.xml
<CustomField>
    <fullName>NCMI_Client__c</fullName>
    <label>NCMI Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>