unpackaged/main/default/objects/Contact/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>Nickname of the contact.</description>
    <inlineHelpText>Please enter the nickname of the contact</inlineHelpText>
    <label>Nickname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>