unpackaged/main/default/objects/Contact/fields/OEM_Commitees__c.field-meta.xml
<CustomField>
    <fullName>OEM_Commitees__c</fullName>
    <label>OEM Commitees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>