unpackaged/main/default/objects/Contact/fields/Opt_Out_of_Marketing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Marketing_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Linked to external/internal marketing tools to indicate they are opted out of MARKETING EMAILS</inlineHelpText>
    <label>Opt Out of Marketing Emails</label>
    <type>Checkbox</type>
</CustomField>