unpackaged/main/default/objects/Contact/fields/Portfolio_Notes__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Notes__c</fullName>
    <description>Notes pertaining to moderator-specific capacity and style</description>
    <label>Portfolio Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>