unpackaged/main/default/objects/Contact/fields/Principles_of_Service_Management_II__c.field-meta.xml
<CustomField>
    <fullName>Principles_of_Service_Management_II__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principles of Service Management II </label>
    <type>Checkbox</type>
</CustomField>