unpackaged/main/default/objects/Contact/fields/Reporting_to__c.field-meta.xml
<CustomField>
    <fullName>Reporting_to__c</fullName>
    <description>NCM Reporting Manager, Director, etc</description>
    <inlineHelpText>NCM Reporting Manager, Director, etc</inlineHelpText>
    <label>Reporting to</label>
    <length>80</length>
    <type>Text</type>
</CustomField>