unpackaged/main/default/objects/Contact/fields/ROI_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>ROI_Form_Submission__c</fullName>
    <label>ROI Form Submission</label>
    <type>TextArea</type>
</CustomField>