unpackaged/main/default/objects/Contact/fields/SMS_Text_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Text_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A check indicates that a customer has agreed to informational and marketing text messages.</inlineHelpText>
    <label>SMS Text Opt In</label>
    <type>Checkbox</type>
</CustomField>