unpackaged/main/default/objects/Contact/fields/Travel_Credits__c.field-meta.xml
<CustomField>
    <fullName>Travel_Credits__c</fullName>
    <label>Travel Credits</label>
    <type>TextArea</type>
</CustomField>