unpackaged/main/default/objects/Contact/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <label>Twitter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>