unpackaged/main/default/objects/Contact/fields/User_Initials__c.field-meta.xml
<CustomField>
    <fullName>User_Initials__c</fullName>
    <formula>User_ID__r.Initials__c</formula>
    <label>User Initials</label>
    <type>Text</type>
</CustomField>