unpackaged/main/default/objects/Contact/fields/UserID_18__c.field-meta.xml
<CustomField>
    <fullName>UserID_18__c</fullName>
    <formula>CASESAFEID( User_ID__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserID (18)</label>
    <type>Text</type>
</CustomField>