unpackaged/main/default/objects/Contact/recordTypes/Business_Development_Contact.recordType-meta.xml
<RecordType>
    <fullName>Business_Development_Contact</fullName>
    <active>true</active>
    <description>Use for all other Business Development Contacts</description>
    <label>Business Development Contact</label>
</RecordType>