unpackaged/main/default/objects/Contact/recordTypes/Moderator_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Moderator_Contacts</fullName>
    <active>true</active>
    <description>User for Contacts owned by Moderators</description>
    <label>Moderator Contacts</label>
</RecordType>