unpackaged/main/default/objects/Contact/recordTypes/NCM_Associates.recordType-meta.xml
<RecordType>
    <fullName>NCM_Associates</fullName>
    <active>true</active>
    <description>Contacts created from Users</description>
    <label>NCM Associates</label>
</RecordType>