unpackaged/main/default/objects/Contact/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>You must enter a First Name</errorMessage>
</ValidationRule>