unpackaged/main/default/objects/Contact/validationRules/Mobile_Field_Numbers_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Field_Numbers_only</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(MobilePhone,&quot;^[0-9]+$&quot;)) &amp;&amp; NOT(ISBLANK(MobilePhone))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Enter only numeric values into a Mobile field.</errorMessage>
</ValidationRule>