unpackaged/main/default/objects/Contact/listViews/Company_Employee_Directory.listView-meta.xml
<ListView>
    <fullName>Company_Employee_Directory</fullName>
    <columns>Active__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Employment_Status__c</columns>
    <columns>User_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.NCM_Associates</value>
    </filters>
    <filters>
        <field>Employment_Status__c</field>
        <operation>equals</operation>
        <value>Employed</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Company Employee Directory</label>
</ListView>