unpackaged/main/default/objects/Contact/listViews/Marketo_Campaign_Leads_WD.listView-meta.xml
<ListView>
    <fullName>Marketo_Campaign_Leads_WD</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>mkto_si__Urgency__c</columns>
    <columns>mkto_si__Relative_Score__c</columns>
    <columns>mkto_si__Priority__c</columns>
    <columns>mkto71_Lead_Score__c</columns>
    <columns>mkto_si__View_in_Marketo__c</columns>
    <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
    <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>mkto_si__Last_Interesting_Moment_Desc__c</field>
        <operation>contains</operation>
        <value>clicked link</value>
    </filters>
    <filters>
        <field>mkto_si__Last_Interesting_Moment_Desc__c</field>
        <operation>contains</operation>
        <value>form</value>
    </filters>
    <label>Marketo Campaign Leads - #WD</label>
</ListView>