unpackaged/main/default/objects/Contact/listViews/NCM_Associates.listView-meta.xml
<ListView>
    <fullName>NCM_Associates</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>NCM Associates</value>
    </filters>
    <filters>
        <field>Employment_Status__c</field>
        <operation>equals</operation>
        <value>Employed</value>
    </filters>
    <label>NCM Associates</label>
</ListView>