unpackaged/main/default/objects/Contact/listViews/NCMi_Survey.listView-meta.xml
<ListView>
    <fullName>NCMi_Survey</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NCMi_Class__c</field>
        <operation>contains</operation>
        <value>2021-05-26-PM2</value>
    </filters>
    <label>NCMi Survey</label>
</ListView>