unpackaged/main/default/objects/Contact/listViews/Newly_Created_TDR.listView-meta.xml
<ListView>
    <fullName>Newly_Created_TDR</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Marketo_Sync__c</columns>
    <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
    <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Business_Development_Contact</value>
    </filters>
    <label>Newly Created - TDR</label>
</ListView>